// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects data renders correctly 1`] = `
<div>
  <div
    className="MuiPaper-root MuiCard-root projectCard MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardMedia-root"
      style={
        Object {
          "backgroundImage": "url(\\"/images/2c714617-c83a-4675-99f4-e7e0d3cd6c92.png\\")",
          "height": 0,
          "paddingTop": "40%",
        }
      }
    />
    <div
      className="MuiCardContent-root"
    >
      <h2
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
      >
        Boulangerie HiTekt
      </h2>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        12€ collectés sur 1000€ (1%)
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={1}
        className="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate"
          style={
            Object {
              "transform": "translateX(-98.8%)",
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <a>
            Découvrir le projet
          </a>
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiPaper-root MuiCard-root projectCard MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardMedia-root"
      style={
        Object {
          "backgroundImage": "url(\\"/images/c6d6f6f9-07d8-4540-87a7-3b8ff8869f55.png\\")",
          "height": 0,
          "paddingTop": "40%",
        }
      }
    />
    <div
      className="MuiCardContent-root"
    >
      <h2
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
      >
        Bar smoothie Bio
      </h2>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        15000€ collectés sur 15000€ (100%)
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={100}
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
          style={
            Object {
              "transform": "translateX(0%)",
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <a>
            Découvrir le projet
          </a>
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiPaper-root MuiCard-root projectCard MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardMedia-root"
      style={
        Object {
          "backgroundImage": "url(\\"/images/65c72f0b-8906-4504-a428-120b1a741905.png\\")",
          "height": 0,
          "paddingTop": "40%",
        }
      }
    />
    <div
      className="MuiCardContent-root"
    >
      <h2
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
      >
        McDonald's sans conservateur
      </h2>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        12000€ collectés sur 15000€ (80%)
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={80}
        className="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate"
          style={
            Object {
              "transform": "translateX(-20%)",
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <a>
            Découvrir le projet
          </a>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Projects error renders correctly 1`] = `
<div>
  Error loading projects.
</div>
`;

exports[`Projects loading renders correctly 1`] = `
<div>
  Loading
</div>
`;
